--- a/tmux.conf
+++ b/tmux.conf
@@ -1,103 +1,103 @@
-## Tmux configuration
-## Updated 2019-07-26.
-##
-## set = set-option
-## setw = set-window-option
-##
-## Check tmux environment:
-## > tmux show-environment -g
-##
-## See also:
-## - http://man.openbsd.org/OpenBSD-current/man1/tmux.1
-## - https://github.com/claytron/dotfiles/blob/master/.tmux.conf
-## - https://github.com/lotabout/dotfiles/blob/master/.tmux.conf
-## - https://github.com/dariomanesku/.tmux/blob/master/.tmux.conf
-## - https://www.hamvocke.com/blog/a-guide-to-customizing-your-tmux-conf/
-##
-## This file uses folds in vim.
-## https://vim.fandom.com/wiki/Folding
+# Tmux configuration
+# Updated 2019-07-27.
+#
+# set = set-option
+# setw = set-window-option
+#
+# Check tmux environment:
+# > tmux show-environment -g
+#
+# See also:
+# - http://man.openbsd.org/OpenBSD-current/man1/tmux.1
+# - https://github.com/claytron/dotfiles/blob/master/.tmux.conf
+# - https://github.com/lotabout/dotfiles/blob/master/.tmux.conf
+# - https://github.com/dariomanesku/.tmux/blob/master/.tmux.conf
+# - https://www.hamvocke.com/blog/a-guide-to-customizing-your-tmux-conf/
+#
+# This file uses folds in vim.
+# https://vim.fandom.com/wiki/Folding
 
 
 
-## Version-specific changes                                                 {{{1
-## =============================================================================
+# Version-specific changes                                                  {{{1
+# ==============================================================================
 
-## See also:
-## - Changelog
-##   https://github.com/tmux/tmux/blob/master/CHANGES
-## - How to write version-specific config
-##   https://stackoverflow.com/questions/35016458
-## - Improved detection method using awk
-##   https://stackoverflow.com/a/41392083/3911732
-## - 2.9 changes
-##   https://github.com/tmux/tmux/issues/1689
-##   https://github.com/tmux/tmux/wiki/FAQ
+# See also:
+# - Changelog
+#   https://github.com/tmux/tmux/blob/master/CHANGES
+# - How to write version-specific config
+#   https://stackoverflow.com/questions/35016458
+# - Improved detection method using awk
+#   https://stackoverflow.com/a/41392083/3911732
+# - 2.9 changes
+#   https://github.com/tmux/tmux/issues/1689
+#   https://github.com/tmux/tmux/wiki/FAQ
 
-## tmux 2.1+ can selectively color the activities pane.
-## Can use xterm-256 colors or ANSI.
-## - http://www.deanbodenham.com/learn/tmux-pane-colours.html
-## - https://stackoverflow.com/a/33562182
-## - https://upload.wikimedia.org/wikipedia/commons/1/15/Xterm_256color_chart.svg
-
-
-
-## Global variables                                                         {{{1
-## =============================================================================
-
-## Passthrough to `if-shell` doesn't seem to be working for me with v2.9.
-## > run-shell 'tmux setenv -g OSNAME $(uname -s)'
-## > run-shell 'tmux setenv -g TMUX_VERSION $(tmux -V | cut -d " " -f 2)'
+# tmux 2.1+ can selectively color the activities pane.
+# Can use xterm-256 colors or ANSI.
+# - http://www.deanbodenham.com/learn/tmux-pane-colours.html
+# - https://stackoverflow.com/a/33562182
+# - https://upload.wikimedia.org/wikipedia/commons/1/15/Xterm_256color_chart.svg
 
 
 
-## General tmux settings                                                    {{{1
-## =============================================================================
+# Global variables                                                          {{{1
+# ==============================================================================
 
-## Force tmux to always use UTF-8.
+# Passthrough to `if-shell` doesn't seem to be working for me with v2.9.
+# > run-shell 'tmux setenv -g OSNAME $(uname -s)'
+# > run-shell 'tmux setenv -g TMUX_VERSION $(tmux -V | cut -d " " -f 2)'
+
+
+
+# General tmux settings                                                     {{{1
+# ==============================================================================
+
+# Force tmux to always use UTF-8.
 setw -gq utf8 on
 
-## Set the default terminal.
-## This improves vim/emacs usage inside tmux.
-## https://gist.github.com/limingjie/4975c36d13d0927613e6
-## > set -g default-terminal "tmux"
-## > set -g default-terminal "xterm-256color"
+# Set the default terminal.
+# This improves vim/emacs usage inside tmux.
+# https://gist.github.com/limingjie/4975c36d13d0927613e6
+# > set -g default-terminal "tmux"
+# > set -g default-terminal "xterm-256color"
 set -g default-terminal "screen-256color"
 
-## Set the delay so that it doesn't interfere with programs like vim.
+# Set the delay so that it doesn't interfere with programs like vim.
 set -sg escape-time 0
 
-## Set the scrollback.
+# Set the scrollback.
 set -g history-limit 200000
 
 
 
-## Key bindings                                                             {{{1
-## =============================================================================
+# Key bindings                                                              {{{1
+# ==============================================================================
 
-## Use vi key bindings.
+# Use vi key bindings.
 setw -g mode-keys vi
 
-## Remap prefix from 'C-b' to 'C-a'.
-## Matches the conventions used in screen.
-## This might interfere with bash's go to beginning of line command.
+# Remap prefix from 'C-b' to 'C-a'.
+# Matches the conventions used in screen.
+# This might interfere with bash's go to beginning of line command.
 set-option -g prefix C-a
 unbind C-b
-## Allow for `C-a C-a` to send it to the application.
+# Allow for `C-a C-a` to send it to the application.
 bind-key C-a send-prefix
 
-## Intuiatively split panes using `|` and `-` instead of `"` and `%`.
+# Intuiatively split panes using `|` and `-` instead of `"` and `%`.
 bind | split-window -h
 bind - split-window -v
 unbind '"'
 unbind %
 
-## Make window and pane indexes start with 1.
-## Zero-indexing is confusing.
+# Make window and pane indexes start with 1.
+# Zero-indexing is confusing.
 set -g base-index 1
 setw -g pane-base-index 1
 
-## Change bind keys.
-## < 2.4: bind-key syntax changed in 2.4.
+# Change bind keys.
+# < 2.4: bind-key syntax changed in 2.4.
 if-shell "tmux -V | awk '{exit !($2 >= \"2.4\")}'" \
     "bind-key -T copy-mode-vi v   send -X begin-selection; \
      bind-key -T copy-mode-vi V   send -X select-line; \
@@ -110,21 +110,21 @@ if-shell "tmux -V | awk '{exit !($2 >= \"2.4\")}'" \
 
 
 
-## Windows and status bar                                                   {{{1
-## =============================================================================
+# Windows and status bar                                                    {{{1
+# ==============================================================================
 
-## Note that windows can be selectively colored using `window-style` and
-## `window-active-style`. This can be useful, but I find it too distracting
-## to use regularly.
+# Note that windows can be selectively colored using `window-style` and
+# `window-active-style`. This can be useful, but I find it too distracting
+# to use regularly.
 
-## Don't hold the size of the smallest client bounds.
+# Don't hold the size of the smallest client bounds.
 setw -g aggressive-resize on
 
-## Notify if other windows have activity.
+# Notify if other windows have activity.
 set -g visual-activity on
 setw -g monitor-activity on
 
-## Set window and status bar aesthetics.
+# Set window and status bar aesthetics.
 set  -g status-style                "fg=white,bg=black"
 set  -g pane-border-style           "fg=white,bg=black"
 set  -g pane-active-border-style    "fg=magenta,bg=black"
@@ -133,23 +133,23 @@ setw -g window-status-current-style "fg=white,bg=black,bright"
 
 
 
-## Mouse mode                                                               {{{1
-## =============================================================================
+# Mouse mode                                                                {{{1
+# ==============================================================================
 
-## Renamed from `mouse-mode` to simply `mouse` in tmux v2.1.
-## Note that this can conflict with vim mouse mode.
+# Renamed from `mouse-mode` to simply `mouse` in tmux v2.1.
+# Note that this can conflict with vim mouse mode.
 
-## PuTTY and PowerShell on Windows:
-## Hold SHIFT, left-click select text, and right-click to paste.
+# PuTTY and PowerShell on Windows:
+# Hold SHIFT, left-click select text, and right-click to paste.
 
-## >= 2.1: "mouse" replaced the previous 4 mouse options.
+# >= 2.1: "mouse" replaced the previous 4 mouse options.
 if-shell "tmux -V | awk '{exit !($2 >= \"2.1\")}'" \
     "set -g mouse on" \
     "set -g mouse-select-pane on; \
      set -g mode-mouse on; \
      set -g mouse-resize-pane on; \
      set -g mouse-select-window on"
-## 2.2+: UTF-8 is autodetected, but errors if explicitly set.
+# 2.2+: UTF-8 is autodetected, but errors if explicitly set.
 if-shell "tmux -V | awk '{exit !($2 < \"2.2\")}'" \
     "set -g utf8 on; \
      set -g status-utf8 on; \
@@ -157,12 +157,12 @@ if-shell "tmux -V | awk '{exit !($2 < \"2.2\")}'" \
 
 
 
-## Copy mode                                                                {{{1
-## =============================================================================
+# Copy mode                                                                 {{{1
+# ==============================================================================
 
-## This config doesn't work well on Windows with PuTTY or PowerShell.
-## Keeping the advanced copy mode macOS-specific for the time being.
-## vim-like copy mode bindings are from https://twitter.com/nickmorrott/status/928343075646210050?s=09
+# This config doesn't work well on Windows with PuTTY or PowerShell.
+# Keeping the advanced copy mode macOS-specific for the time being.
+# vim-like copy mode bindings are from https://twitter.com/nickmorrott/status/928343075646210050?s=09
 if-shell "uname -s | awk '{exit !($1 == \"Darwin\")}'" \
     'bind-key -T copy-mode-vi Enter   send-keys -X copy-pipe "pbcopy" \; display-message "Text copied to clipboard"; \
      bind-key -T copy-mode-vi y       send-keys -X copy-pipe "pbcopy" \; display-message "Text copied to clipboard"; \
