--- a/.gitmodules
+++ b/.gitmodules
@@ -9,10 +9,6 @@
 	url = https://github.com/mjsteinbaugh/dotfiles-dracula-putty.git
 
 # vim-airline/vim-airline
-[submodule "vim/pack/dist/start/Nvim-R"]
-	path = vim/pack/dist/start/Nvim-R
-	url = https://github.com/mjsteinbaugh/dotfiles-nvim-r.git
-
 [submodule "vim/pack/dist/start/airline"]
 	path = vim/pack/dist/start/airline
 	url = https://github.com/mjsteinbaugh/dotfiles-vim-airline.git
@@ -22,3 +18,6 @@
 [submodule "vim/pack/dist/start/markdown"]
 	path = vim/pack/dist/start/markdown
 	url = https://github.com/mjsteinbaugh/dotfiles-vim-markdown.git
+[submodule "vim/pack/dist/start/R"]
+	path = vim/pack/dist/start/R
+	url = https://github.com/mjsteinbaugh/dotfiles-vim-r.git
