--- a/.gitmodules
+++ b/.gitmodules
@@ -1,10 +1,12 @@
 # Git submodules
-# Updated 2019-09-16.
+# Updated 2019-10-11.
 
 # > man git submodule
 # > git submodule add [--force] <REPO> <PATH>
 # > git submodule update --init --recursive
 
+# Restore git submodules from '.gitmodules' file.
+# https://stackoverflow.com/questions/11258737
 
 
 # Dracula                                                                   {{{1
@@ -31,28 +33,34 @@
 	# https://github.com/jalvesaq/Nvim-R
 	path = vim/pack/dist/start/R
 	url = https://github.com/mjsteinbaugh/dotfiles-vim-r.git
-
 [submodule "vim/pack/dist/start/airline"]
-	# vim-airline
+	# vim-airline (powerline)
 	# https://github.com/vim-airline/vim-airline
 	path = vim/pack/dist/start/airline
 	url = https://github.com/mjsteinbaugh/dotfiles-vim-airline.git
-
 [submodule "vim/pack/dist/start/dracula-theme"]
-	# dracula vim
+	# dracula theme
 	# https://github.com/dracula/vim
 	# Note that this must be named "dracula-theme", not "dracula".
 	path = vim/pack/dist/start/dracula-theme
 	url = https://github.com/mjsteinbaugh/dotfiles-dracula-vim.git
-
+[submodule "vim/pack/dist/start/fugitive"]
+	# vim-fugitive (git)
+	# https://github.com/tpope/vim-fugitive
+	path = vim/pack/dist/start/fugitive
+	url = https://github.com/mjsteinbaugh/dotfiles-vim-fugitive.git
 [submodule "vim/pack/dist/start/markdown"]
 	# vim-markdown
 	# https://github.com/plasticboy/vim-markdown
 	path = vim/pack/dist/start/markdown
 	url = https://github.com/mjsteinbaugh/dotfiles-vim-markdown.git
-
+[submodule "vim/pack/dist/start/nerdtree"]
+	# nerdtree (file tree browser)
+	# https://github.com/scrooloose/nerdtree
+	path = vim/pack/dist/start/nerdtree
+	url = https://github.com/mjsteinbaugh/dotfiles-vim-nerdtree.git
 [submodule "vim/pack/dist/start/syntastic"]
-	# syntastic
+	# syntastic (linter)
 	# https://github.com/vim-syntastic/syntastic.git
 	path = vim/pack/dist/start/syntastic
-	url = https://github.com/mjsteinbaugh/dotfiles-vim-syntastic.git
+    url = https://github.com/mjsteinbaugh/dotfiles-vim-syntastic.git
