--- a/app/tmux/tmux.conf
+++ b/app/tmux/tmux.conf
@@ -1,5 +1,5 @@
 # Tmux configuration
-# Updated 2019-09-12.
+# Updated 2019-11-20.
 #
 # set = set-option
 # setw = set-window-option
@@ -96,14 +96,22 @@ setw -g pane-base-index 1
 # Change bind keys.
 # < 2.4: bind-key syntax changed in 2.4.
 if-shell "tmux -V | awk '{exit !($2 >= \"2.4\")}'" \
-    "bind-key -T copy-mode-vi v   send -X begin-selection; \
-     bind-key -T copy-mode-vi V   send -X select-line; \
-     bind-key -T copy-mode-vi C-v send -X rectangle-toggle; \
-     bind-key -T copy-mode-vi y   send -X copy-pipe-and-cancel 'xclip -selection clipboard -in'" \
-    "bind-key -t vi-copy      v           begin-selection; \
-     bind-key -t vi-copy      V           select-line; \
-     bind-key -t vi-copy      C-v         rectangle-toggle; \
-     bind-key -t vi-copy      y           copy-pipe 'xclip -selection clipboard -in'"
+   "bind-key -T copy-mode-vi v \
+        send -X begin-selection; \
+    bind-key -T copy-mode-vi V \
+        send -X select-line; \
+    bind-key -T copy-mode-vi C-v \
+        send -X rectangle-toggle; \
+    bind-key -T copy-mode-vi y \
+        send -X copy-pipe-and-cancel 'xclip -selection clipboard -in'" \
+   "bind-key -t vi-copy v \
+        begin-selection; \
+    bind-key -t vi-copy V \
+        select-line; \
+    bind-key -t vi-copy C-v \
+        rectangle-toggle; \
+    bind-key -t vi-copy y \
+        copy-pipe 'xclip -selection clipboard -in'"
 
 
 
