--- a/app/docker/config.json
+++ b/app/docker/config.json
@@ -1,3 +1,9 @@
 {
-    "credsStore": "pass"
+	"auths": {
+		"https://index.docker.io/v1/": {}
+	},
+	"HttpHeaders": {
+		"User-Agent": "Docker-Client/19.03.5 (linux)"
+	},
+	"credsStore": "pass"
 }
