--- a/app/docker/config.json
+++ b/app/docker/config.json
@@ -1,9 +1,10 @@
 {
 	"auths": {
+		"613270166625.dkr.ecr.us-east-2.amazonaws.com": {},
 		"https://index.docker.io/v1/": {}
 	},
 	"HttpHeaders": {
-		"User-Agent": "Docker-Client/19.03.5 (linux)"
+		"User-Agent": "Docker-Client/19.03.6 (linux)"
 	},
 	"credsStore": "pass"
 }
