Attempt to improve color support

--- a/app/tmux/tmux.conf
+++ b/app/tmux/tmux.conf
@@ -1,8 +1,9 @@
+# """
 # Tmux configuration
-# Updated 2019-11-20.
+# Updated 2020-02-15.
 #
-# set = set-option
-# setw = set-window-option
+# * set = set-option
+# * setw = set-window-option
 #
 # Check tmux environment:
 # > tmux show-environment -g
@@ -13,6 +14,7 @@
 # - https://github.com/lotabout/dotfiles/blob/master/.tmux.conf
 # - https://github.com/dariomanesku/.tmux/blob/master/.tmux.conf
 # - https://www.hamvocke.com/blog/a-guide-to-customizing-your-tmux-conf/
+# """
 
 
 
@@ -167,11 +169,34 @@ if-shell "tmux -V | awk '{exit !($2 < \"2.2\")}'" \
 
 # This config doesn't work well on Windows with PuTTY or PowerShell.
 # Keeping the advanced copy mode macOS-specific for the time being.
-# vim-like copy mode bindings are from https://twitter.com/nickmorrott/status/928343075646210050?s=09
+#
+# vim-like copy mode bindings are from:
+# https://twitter.com/nickmorrott/status/928343075646210050?s=09
+
 if-shell "uname -s | awk '{exit !($1 == \"Darwin\")}'" \
-    'bind-key -T copy-mode-vi Enter   send-keys -X copy-pipe "pbcopy" \; display-message "Text copied to clipboard"; \
-     bind-key -T copy-mode-vi y       send-keys -X copy-pipe "pbcopy" \; display-message "Text copied to clipboard"; \
-     bind -T     copy-mode-vi v       send-keys -X begin-selection; \
-     bind -T     copy-mode-vi V       send-keys -X select-line; \
-     bind -T     copy-mode-vi C-v     send-keys -X rectangle-toggle \; send-keys -X begin-selection; \
-     bind -T     copy-mode-vi Escape  send-keys -X cancel'
+    'bind-key -T    copy-mode-vi Enter \
+                    send-keys -X copy-pipe "pbcopy" \; \
+                    display-message "Text copied to clipboard"; \
+     bind-key -T    copy-mode-vi y       \
+                    send-keys -X copy-pipe "pbcopy" \; \
+                    display-message "Text copied to clipboard"; \
+     bind -T        copy-mode-vi v       \
+                    send-keys -X begin-selection; \
+     bind -T        copy-mode-vi V       \
+                    send-keys -X select-line; \
+     bind -T        copy-mode-vi C-v     \
+                    send-keys -X rectangle-toggle \; \
+                    send-keys -X begin-selection; \
+     bind -T        copy-mode-vi Escape \
+                    send-keys -X cancel'
+
+
+
+# 24-bit color support                                                      {{{1
+# ==============================================================================
+
+# https://github.com/tmux/tmux/issues/1246
+
+set -g default-terminal "xterm-256color"
+set -ga terminal-overrides ",*256col*:Tc"
+
