--- a/app/tmux/tmux.conf
+++ b/app/tmux/tmux.conf
@@ -55,12 +55,6 @@
 # Force tmux to always use UTF-8.
 setw -gq utf8 on
 
-# Set the default terminal.
-# This improves vim/emacs usage inside tmux.
-# https://gist.github.com/limingjie/4975c36d13d0927613e6
-# > set -g default-terminal "tmux"
-# > set -g default-terminal "xterm-256color"
-set -g default-terminal "screen-256color"
 
 # Set the delay so that it doesn't interfere with programs like vim.
 set -sg escape-time 0
@@ -73,10 +67,22 @@ set -g history-limit 200000
 # 24-bit color support                                                      {{{1
 # ==============================================================================
 
-# https://github.com/tmux/tmux/issues/1246
+# Set the default terminal.
+# This improves vim/emacs usage inside tmux.
+#
+# > set -g default-terminal "tmux"
+# > set -g default-terminal "xterm-256color"
+#
+# See also:
+# - https://github.com/tmux/tmux/wiki/FAQ
+# - https://gist.github.com/limingjie/4975c36d13d0927613e6
+# - https://github.com/tmux/tmux/issues/1246
+# - https://unix.stackexchange.com/questions/1045
+# - https://tomlankhorst.nl/iterm-tmux-vim-true-color/
 
-set -g default-terminal "xterm-256color"
-set -ga terminal-overrides ",*256col*:Tc"
+set -g default-terminal "screen-256color"
+set -ga terminal-overrides ",xterm-256color:Tc"
+# set -ga terminal-overrides ",*256col*:Tc"
 
 
 
