--- a/app/tmux/tmux.conf
+++ b/app/tmux/tmux.conf
@@ -81,8 +81,8 @@ set -g history-limit 200000
 # - https://tomlankhorst.nl/iterm-tmux-vim-true-color/
 
 set -g default-terminal "screen-256color"
-set -ga terminal-overrides ",xterm-256color:Tc"
-# set -ga terminal-overrides ",*256col*:Tc"
+# > set -ga terminal-overrides ",*256col*:Tc"
+set -ga terminal-overrides ",xterm-256color*:Tc"
 
 
 
