Improve tmux config

--- a/app/tmux/tmux.conf
+++ b/app/tmux/tmux.conf
@@ -64,10 +64,10 @@ set -g history-limit 200000
 
 
 
-# 24-bit color support                                                      {{{1
+# Colors                                                                    {{{1
 # ==============================================================================
 
-# Set the default terminal.
+# Set the default terminal, supporting 256 colors.
 # This improves vim/emacs usage inside tmux.
 #
 # > set -g default-terminal "tmux"
@@ -81,8 +81,7 @@ set -g history-limit 200000
 # - https://tomlankhorst.nl/iterm-tmux-vim-true-color/
 
 set -g default-terminal "screen-256color"
-# > set -ga terminal-overrides ",*256col*:Tc"
-set -ga terminal-overrides ",xterm-256color*:Tc"
+set -ga terminal-overrides ",xterm-256color:Tc"
 
 
 
