Update tmux config

--- a/app/tmux/tmux.conf
+++ b/app/tmux/tmux.conf
@@ -2,6 +2,9 @@
 # Tmux configuration
 # Updated 2020-02-15.
 #
+# Restart the server when changing settings:
+# > tmux kill-server
+#
 # * set = set-option
 # * setw = set-window-option
 #
@@ -67,12 +70,6 @@ set -g history-limit 200000
 # Colors                                                                    {{{1
 # ==============================================================================
 
-# Set the default terminal, supporting 256 colors.
-# This improves vim/emacs usage inside tmux.
-#
-# > set -g default-terminal "tmux"
-# > set -g default-terminal "xterm-256color"
-#
 # See also:
 # - https://github.com/tmux/tmux/wiki/FAQ
 # - https://gist.github.com/limingjie/4975c36d13d0927613e6
@@ -80,7 +77,12 @@ set -g history-limit 200000
 # - https://unix.stackexchange.com/questions/1045
 # - https://tomlankhorst.nl/iterm-tmux-vim-true-color/
 
+# Set the default terminal, supporting 256 colors.
 set -g default-terminal "screen-256color"
+
+# Enable 24-bit true color support.
+# Check with:
+# > tmux info | grep Tc
 set -ga terminal-overrides ",xterm-256color:Tc"
 
 
