Make vim and tmux happy

--- a/app/tmux/tmux.conf
+++ b/app/tmux/tmux.conf
@@ -70,19 +70,25 @@ set -g history-limit 200000
 # Colors                                                                    {{{1
 # ==============================================================================
 
+# It's complicated getting 24-bit true color support to work in tmux.
+#
+# Check with:
+# > tmux kill-server
+# > tmux info | grep Tc
+#
 # See also:
 # - https://github.com/tmux/tmux/wiki/FAQ
-# - https://gist.github.com/limingjie/4975c36d13d0927613e6
-# - https://github.com/tmux/tmux/issues/1246
-# - https://unix.stackexchange.com/questions/1045
+# - https://jdhao.github.io/2018/10/19/tmux_nvim_true_color/
 # - https://tomlankhorst.nl/iterm-tmux-vim-true-color/
+# - https://www.reddit.com/r/vim/comments/5416d0/
+# - https://github.com/dracula/vim/issues/96
+# - https://github.com/tmux/tmux/issues/1246
 
-# Set the default terminal, supporting 256 colors.
+# Set the default terminal inside tmux, which natively supports 256 colors.
 set -g default-terminal "screen-256color"
 
 # Enable 24-bit true color support.
-# Check with:
-# > tmux info | grep Tc
+# Note that this value should match the client terminal outside of tmux.
 set -ga terminal-overrides ",xterm-256color:Tc"
 
 
