--- a/app/gnupg/gpg-agent.conf
+++ b/app/gnupg/gpg-agent.conf
@@ -1,5 +1,11 @@
+# """
+# GPG agent configuration.
+# Updated 2020-02-16.
+#
 # Reload config:
 # > gpg-connect-agent reloadagent /bye
+# """
 
-default-cache-ttl 10000000
-pinentry-timeout 10000000
+default-cache-ttl   10000000
+max-cache-ttl       100000000
+pinentry-timeout    10000000
