Attempt to relax settings

--- a/app/gnupg/gpg-agent.conf
+++ b/app/gnupg/gpg-agent.conf
@@ -4,8 +4,20 @@
 #
 # Reload config:
 # > gpg-connect-agent reloadagent /bye
+#
+# > allow-loopback-pinentry
+# > enable-ssh-support
+#
+# > default-cache-ttl 10000000
+# > max-cache-ttl 100000000
+# > pinentry-timeout 10000000
+#
+# Extend re-use window to 2 hrs.
+# > default-cache-ttl 7200
+# Force re-auth every half-day.
+# > max-cache-ttl 43200
 # """
 
-default-cache-ttl   10000000
-max-cache-ttl       100000000
-pinentry-timeout    10000000
+default-cache-ttl 0
+max-cache-ttl 0
+pinentry-program /usr/bin/pinentry-curses
