Update gpg config

--- a/app/gnupg/gpg-agent.conf
+++ b/app/gnupg/gpg-agent.conf
@@ -5,19 +5,22 @@
 # Reload config:
 # > gpg-connect-agent reloadagent /bye
 #
+# These settings will prompt every time.
+# > default-cache-ttl 0
+# > max-cache-ttl 0
+#
+# Potentially useful:
 # > allow-loopback-pinentry
 # > enable-ssh-support
-#
-# > default-cache-ttl 10000000
-# > max-cache-ttl 100000000
-# > pinentry-timeout 10000000
-#
-# Extend re-use window to 2 hrs.
-# > default-cache-ttl 7200
-# Force re-auth every half-day.
-# > max-cache-ttl 43200
 # """
 
-default-cache-ttl 0
-max-cache-ttl 0
+# Extend re-use window to 4 hrs.
+# 60 * 60 * 4 = 14400
+default-cache-ttl 14400
+
+# Force re-auth every half-day.
+# 60 * 60 * 24 = 86400
+max-cache-ttl 86400
+
 pinentry-program /usr/bin/pinentry-curses
+pinentry-timeout 60
