Harden GPG config

--- a/app/gnupg/gpg-agent.conf
+++ b/app/gnupg/gpg-agent.conf
@@ -3,6 +3,7 @@
 # Updated 2020-02-16.
 #
 # Reload config:
+# > gpgconf --kill gpg-agent
 # > gpg-connect-agent reloadagent /bye
 #
 # These settings will prompt every time.
