--- a/.gitmodules
+++ b/.gitmodules
@@ -66,3 +66,7 @@
 	path = shell/zsh/plugins/zsh-autosuggestions
 	url = https://github.com/zsh-users/zsh-autosuggestions
 	branch = master
+[submodule "theme/dracula/bbedit"]
+	path = theme/dracula/bbedit
+	url = https://github.com/dracula/bbedit.git
+	branch = master
