--- a/app/gnupg/gpg-agent.conf
+++ b/app/gnupg/gpg-agent.conf
@@ -1,6 +1,6 @@
 # """
 # GPG agent configuration.
-# Updated 2020-03-01.
+# Updated 2020-03-02.
 #
 # Reload config:
 # > gpgconf --kill gpg-agent
@@ -23,7 +23,7 @@ default-cache-ttl 604800
 # 60 * 60 * 24 * 30 = 2592000
 max-cache-ttl 2592000
 
-# Alternatively, can use 'pinentry-curses'.
-pinentry-program /usr/bin/pinentry-tty
+# Alternatively, can use 'pinentry-tty'.
+pinentry-program /usr/bin/pinentry-curses
 # Allow input for 1 minute.
 pinentry-timeout 60
