Add tpm support

--- a/app/tmux/tmux.conf
+++ b/app/tmux/tmux.conf
@@ -1,6 +1,6 @@
 # """
-# Tmux configuration
-# Updated 2020-02-15.
+# Tmux configuration.
+# Updated 2020-05-04.
 #
 # Restart the server when changing settings:
 # > tmux kill-server
@@ -57,7 +57,6 @@
 
 # Force tmux to always use UTF-8.
 setw -gq utf8 on
-
 
 # Set the delay so that it doesn't interfere with programs like vim.
 set -sg escape-time 0
@@ -212,3 +211,37 @@ if-shell "uname -s | awk '{exit !($1 == \"Darwin\")}'" \
                     send-keys -X begin-selection; \
      bind -T        copy-mode-vi Escape \
                     send-keys -X cancel'
+
+
+
+# Plugins                                                                   {{{1
+# ==============================================================================
+
+# Dracula                                                                   {{{2
+# ------------------------------------------------------------------------------
+
+set -g @plugin 'dracula/tmux'
+
+# Disable battery functionality.
+set -g @dracula-show-battery false
+
+# Disable network functionality.
+set -g @dracula-show-network false
+
+# Disable weather functionality.
+set -g @dracula-show-weather false
+
+# Switch from default Fahrenheit to Celsius.
+# > set -g @dracula-show-fahrenheit false
+
+# TPM                                                                       {{{2
+# ------------------------------------------------------------------------------
+
+# Tmux plugin manager (tpm).
+# https://github.com/tmux-plugins/tpm
+
+# Install/update plugins:
+# prefix + I
+
+# Keep this line at the very bottom of 'tmux.conf'.
+run -b '~/.tmux/plugins/tpm/tpm'
